# cookiecutter-pypackage-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: CHANGELOG.md  Makefile  README.md  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
